<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetail">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#D8D4D4"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#134D16">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="51dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/app_name"
                android:onClick="goToMain"
                app:srcCompat="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/TitleEventDetail"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homeLayout"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/homeImage"
                        android:layout_width="92dp"
                        android:layout_height="97dp"
                        android:layout_margin="5dp"
                        android:onClick="goToTeam"/>

                    <TextView
                        android:id="@+id/homeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize ="5dp"
                        android:text = "view"
                        android:onClick="viewdata"
                        />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homeScore"
                    android:textSize="50dp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/versus"
                    android:text="@string/versus"
                    android:textSize="45dp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/awayScore"
                    android:textSize="50dp"
                    android:layout_margin="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/awayLayout"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/awayImage"
                        android:layout_width="92dp"
                        android:layout_height="97dp"
                        android:layout_margin="5dp"
                        android:onClick="goToTeam" />

                    <TextView
                        android:id="@+id/awayName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"/>
                    <Button
                        android:id="@+id/subscribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize ="5dp"
                        android:text = "subscribe"
                        android:onClick="dbInput"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shots"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/shotsLayout">

                <TextView
                    android:id="@+id/homeShots"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/awayShots"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:gravity="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/goals"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/goalLayout">

                <TextView
                    android:id="@+id/homeGoals"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/awayGoals"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:gravity="center"/>
            </LinearLayout>
            <TextView
                android:id="@+id/homeId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:text="test"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/awayId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:text="test"
                android:visibility="gone"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>